# stock-scanner-pro

./: .gitignore  README.md  pyproject.toml
backend/: README.md  exe_launcher.py  settings.py
backend/alerts/: channels.py
backend/api/: app.py  schemas.py  service.py
backend/database/: bootstrap.py  models.py  repository.py  session.py
backend/indicators/: calculator.py
backend/scanner/: engine.py  market_data.py  scoring.py  types.py  universe.py
backend/tests/: test_api.py  test_engine.py  test_market_data.py  test_scoring.py
frontend/: README.md
frontend/components/: styles.css
frontend/dashboard/: index.html
installer/: stock-scanner-pro.iss
scripts/: 1_verificar_prerrequisitos.ps1  1_verificar_prerrequisitos.sh  2_crear_entorno.ps1  2_crear_entorno.sh  3_instalar_dependencias.ps1  3_instalar_dependencias.sh  4_levantar_api.ps1  4_levantar_api.sh
