[project]
name = "stock-scanner-pro"
version = "0.1.0"
description = "Professional stock scanner platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "aiosqlite>=0.20.0",
  "httpx>=0.27.0",
  "pandas>=2.2.2",
  "numpy>=2.0.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
